objects/copado__Step__c.object
<CustomObject>
    <fields>
        <fullName>copado__Attachment_Id__c</fullName>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__CheckOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This only Apply for Metadata Steps. None of the other Steps types are affected by this checkbox. 
WARNING: Credits consumption will apply as a regular deployment since resource-wise is exactly the same as a real deployment.</inlineHelpText>
        <label>CheckOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Completed__c</fullName>
        <formula>IF(copado__Org_Count__c &gt; 0, 
copado__Count_Completed__c / copado__Org_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Count_Completed__c</fullName>
        <label># Completed</label>
        <summaryFilterItems>
            <field>copado__Deployment_Job__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Success, Failed</value>
        </summaryFilterItems>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Deployed__c</fullName>
        <formula>IF(copado__Org_Count__c &gt; 0,
copado__SUM_Deployed__c / copado__Org_Count__c,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Deployed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Deployment__c</fullName>
        <label>Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Org_Count__c</fullName>
        <label>Org Count</label>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__SUM_Deployed__c</fullName>
        <label>SUM Deployed</label>
        <summarizedField>copado__Deployment_Job__c.copado__Deployed__c</summarizedField>
        <summaryForeignKey>copado__Deployment_Job__c.copado__Step__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado__Status_Flag__c</fullName>
        <formula>IMAGE( 
  CASE(  copado__Status__c,  &quot;Completed Successfully&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;, 
  &quot;Completed with Errors&quot;, &quot;/img/samples/flag_red.gif&quot;, 
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Successfully</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with Errors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MetaData</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Full Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Translations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulk Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete MetaData</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__View_Attachment__c</fullName>
        <formula>IF( 
  NOT(ISBLANK(copado__Attachment_Id__c)),
  HYPERLINK(&quot;/&quot;+copado__Attachment_Id__c, &quot;View&quot;, &quot;_blank&quot;),
  &quot;&quot;
)</formula>
        <label>View Attachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__dataJson__c</fullName>
        <description>If the step type is &quot;data&quot;  this should contains the json defining the query. 
In production this field should be HIDDEN</description>
        <label>dataJson</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>